Integrate Package Generation

--- a/PA.Plugin.csproj
+++ b/PA.Plugin.csproj
@@ -22,8 +22,6 @@
     <SccProvider>
     </SccProvider>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <ReleaseVersion>4.0</ReleaseVersion>
   </PropertyGroup>
@@ -162,4 +160,5 @@
     </PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="$(SolutionDir)\.build\Extra.targets" Condition="Exists('$(SolutionDir)\.build\Extra.targets')" />
 </Project>
