--- a/PA.Plugin/packages.config
+++ b/PA.Plugin/packages.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitVersionTask" version="2.0.1" targetFramework="net45" developmentDependency="true" />
+  <package id="GitVersionTask" version="5.5.0" targetFramework="net45" developmentDependency="true" />
+  <package id="ini-parser" version="2.2.2" targetFramework="net45" />
+  <package id="Mono.Security" version="3.2.3.0" targetFramework="net45" />
+  <package id="PA.Configuration" version="4.9.1" targetFramework="net45" />
+  <package id="PA.Converters" version="4.7.4" targetFramework="net45" />
+  <package id="PA.Utilities.AssemblyMetadata" version="6.0.2" targetFramework="net45" />
+  <package id="PCLCrypto" version="1.0.2.15130" targetFramework="net45" />
+  <package id="Validation" version="2.0.6.15003" targetFramework="net45" />
 </packages>
