--- a/PA.Plugin.Operations/app.config
+++ b/PA.Plugin.Operations/app.config
@@ -10,6 +10,18 @@
         <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="PA.Utilities.AssemblyMetadata" publicKeyToken="efe7f84d28b0579c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.1.0.0" newVersion="6.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="INIFileParser" publicKeyToken="79af7b307b65cf3c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.5.2.0" newVersion="2.5.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Validation" publicKeyToken="2fc06f0d701809a7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.0.0" newVersion="2.4.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup></configuration>
