--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,17 +14,17 @@ assembly_info:
   patch: false
   
 before_build:
-- cmd: nuget restore PA.TileList.sln
+- cmd: nuget restore PA.Plugin.sln
 
 build:
-  project: PA.TileList.sln			# path to Visual Studio solution or project
+  project: PA.Plugin.sln			# path to Visual Studio solution or project
   publish_nuget: false				# package projects with .nuspec files and push to artifacts
   publish_nuget_symbols: false     	# generate and publish NuGet symbol packages
   include_nuget_references: false	# add -IncludeReferencedProjects option while packaging NuGet artifacts
   verbosity: normal
   
 artifacts:
-- path: '**/PA.TileList.*.nupkg'
+- path: '**/PA.Plugin.*.nupkg'
 
 deploy:
 - provider: Environment
