--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,15 @@
-version: 'build.{build}'
-
 branches:
+ # whitelist
 
   # blacklist
   except:
+    - develop
     - gh-pages
 
-image: Visual Studio 2013
+image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
+skip_tags: true
 
 assembly_info:
   patch: false
@@ -19,19 +20,21 @@ before_build:
 build:
   project: PA.Plugin.sln			# path to Visual Studio solution or project
   publish_nuget: false				# package projects with .nuspec files and push to artifacts
-  publish_nuget_symbols: false     	# generate and publish NuGet symbol packages
-  include_nuget_references: false	# add -IncludeReferencedProjects option while packaging NuGet artifacts
+  publish_nuget_symbols: true     	# generate and publish NuGet symbol packages
+  include_nuget_references: true	# add -IncludeReferencedProjects option while packaging NuGet artifacts
   verbosity: normal
-  
+
+test: off
+
 artifacts:
 - path: '**/PA.Plugin.*.nupkg'
 
 deploy:
 - provider: Environment
-  name: nuget.org
+  name: https://www.nuget.org/profiles/tomgrv
   on:
     branch: master
 - provider: Environment
-  name: github.com
+  name: https://github.com/tomgrv
   on:
     branch: master
