--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,12 @@ skip_tags: true
 
 assembly_info:
   patch: false
+
+install:
+  - choco install gitversion.portable -pre -y
   
 before_build:
+- ps: gitversion /l console /output buildserver /updateAssemblyInfo
 - cmd: nuget restore PA.Plugin.sln
 
 build:
