ci: add pack on build

--- a/PA.Plugin.Components/PA.Plugin.Components.csproj
+++ b/PA.Plugin.Components/PA.Plugin.Components.csproj
@@ -7,6 +7,7 @@
     <ReleaseVersion>5.0.0</ReleaseVersion>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
+     <PackOnBuild>true</PackOnBuild>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup>
