--- a/PA.Plugin.Operations/PA.Plugin.Operations.csproj
+++ b/PA.Plugin.Operations/PA.Plugin.Operations.csproj
@@ -5,6 +5,7 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <ReleaseVersion>5.0.0</ReleaseVersion>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+     <PackOnBuild>true</PackOnBuild>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
