--- a/PA.Plugin/PA.Plugin.csproj
+++ b/PA.Plugin/PA.Plugin.csproj
@@ -7,6 +7,7 @@
     <ReleaseVersion>5.0.0</ReleaseVersion>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+     <PackOnBuild>true</PackOnBuild>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
