--- a/PA.Plugin.Components/PA.Plugin.Components.csproj
+++ b/PA.Plugin.Components/PA.Plugin.Components.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>PA.Toolbox.snk</AssemblyOriginatorKeyFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\common\GlobalAssemblyInfo.cs">
