chore: update package content

--- a/PA.Plugin.File/PA.Plugin.File.csproj
+++ b/PA.Plugin.File/PA.Plugin.File.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
@@ -7,6 +7,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
      <PackOnBuild>true</PackOnBuild>
      <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+     <Authors>tomgrv</Authors>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\common\GlobalAssemblyInfo.cs">
