--- a/PA.Plugin/PA.Plugin.csproj
+++ b/PA.Plugin/PA.Plugin.csproj
@@ -32,6 +32,7 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>PA.Toolbox.snk</AssemblyOriginatorKeyFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>tomgrv</Authors>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\common\GlobalAssemblyInfo.cs">
