--- a/PA.Plugin.Components/PA.Plugin.Components.csproj
+++ b/PA.Plugin.Components/PA.Plugin.Components.csproj
@@ -16,6 +16,7 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>PA.Toolbox.snk</AssemblyOriginatorKeyFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>tomgrv</Authors>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\common\GlobalAssemblyInfo.cs">
