--- a/PA.Plugin.Operations/PA.Plugin.Operations.csproj
+++ b/PA.Plugin.Operations/PA.Plugin.Operations.csproj
@@ -13,6 +13,7 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>PA.Toolbox.snk</AssemblyOriginatorKeyFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>tomgrv</Authors>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\common\GlobalAssemblyInfo.cs">
