--- a/PA.Plugin/PA.Plugin.csproj
+++ b/PA.Plugin/PA.Plugin.csproj
@@ -43,16 +43,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="GitVersion.MsBuild" Version="5.6.10">
+    <PackageReference Include="GitVersion.MsBuild" Version="5.8.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="PA.Configuration" Version="5.0.0-beta.1+1"></PackageReference>
+    <PackageReference Include="PA.Configuration" Version="5.0.1"></PackageReference>
     <PackageReference Include="PA.Converters" Version="4.7.4" />
     <PackageReference Include="PA.Utilities.AssemblyMetadata" Version="6.1.0" />
-    <PackageReference Include="System.ComponentModel.Composition" Version="5.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
-    <PackageReference Include="Validation" Version="2.4.22" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Attributes\PluginAdressableAttribute.cs" />
